# 2024_eeydo1

./: .gitignore  README.md  git-cheat-sheet.txt  hi_and_date.cmd
.github/workflows/: doxygen-deploy.yml
Worksheet5/: CMakeLists.txt  adder.h
individual/Worksheet7/VTK_VR_Demo/builld/: ALL_BUILD.vcxproj  CMakeCache.txt  VRBindings.vcxproj  VRBindings.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vtkexample_vr1.sln  vtkexample_vr1.vcxproj  vtkexample_vr1.vcxproj.filters
individual/Worksheet7/VTK_VR_Demo/builld/vtkexample_vr1.dir/Debug/: vtkexample_vr1.exe.recipe  vtkexample_vr1.ilk
individual/Worksheet7/VTK_VR_Demo/builld/vtkexample_vr1.dir/Debug/vtkexample_vr1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
individual/Worksheet7/VTK_VR_Demo/builld/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
individual/Worksheet7/VTK_VR_Demo/builld/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
individual/Worksheet7/VTK_VR_Demo/builld/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
individual/Worksheet7/VTK_VR_Demo/builld/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+3 more)
worksheet 3/: adder.h  hello.cpp
worksheet 3/adder_dynamic/lib/: libadder.exp
worksheet 4/Calc/: CMakeLists.txt  calc.cpp
worksheet 4/Calc_dynamic/: CMakeLists.txt  adder.cpp  adder.h
worksheet 4/hello_cmake/: CMakeLists.txt
worksheet5/: Doxyfile
worksheettep/: Doxyfile
